test_regress/t/t_genvar_for_bad.out
%Error: t/t_genvar_for_bad.v:23:12: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   23 |       for (i = 0; i < N; i = i + 1) begin
      |            ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_genvar_for_bad.v:23:19: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   23 |       for (i = 0; i < N; i = i + 1) begin
      |                   ^
%Error: t/t_genvar_for_bad.v:24:21: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   24 |         ov[i] <= iv[i];
      |                     ^
%Error: t/t_genvar_for_bad.v:24:12: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   24 |         ov[i] <= iv[i];
      |            ^
%Error: t/t_genvar_for_bad.v:23:30: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   23 |       for (i = 0; i < N; i = i + 1) begin
      |                              ^
%Error: t/t_genvar_for_bad.v:23:26: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   23 |       for (i = 0; i < N; i = i + 1) begin
      |                          ^
%Error: Exiting due to
